--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - run: ls -l CalculatorApp/bin/Release/
+    - run: ls -l ./CalculatorApp/bin/Release/
     - name: Release
       uses: ncipollo/release-action@v1.14.0
       with:
