--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1.14.0
       with:
-        artifact: "./CalculatorApp/bin/Release/"
+        artifact: "./CalculatorApp/bin/Release/net6.0/CalculatorApp"
     
