--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,4 +31,5 @@ jobs:
       uses: ncipollo/release-action@v1.14.0
       with:
         artifact: "./CalculatorApp/bin/Release/net6.0/CalculatorApp"
+        tag: 1.0
     
