--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1.14.0
       with:
-        artifact: "./CalculatorApp/bin/Release/net6.0/CalculatorApp"
-        tag: 1.0
+        artifacts: "./CalculatorApp/bin/Release/net6.0/CalculatorApp"
+        tag: 1.0.{{github.run_number}}
+        token: ${{ secrets.GITHUB_TOKEN}}
     
