--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,6 +31,6 @@ jobs:
       uses: ncipollo/release-action@v1.14.0
       with:
         artifacts: "./CalculatorApp/bin/Release/net6.0/CalculatorApp"
-        tag: 1.0.{{github.run_number}}
+        tag: 1.0.${{github.run_number}}
         token: ${{ secrets.GITHUB_TOKEN}}
     
