--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: Dev .NET
 
 on:
   push:
@@ -22,4 +22,11 @@ jobs:
     - name: Build
       run: dotnet build --no-restore 
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults" l --logger trx --results-directory "TestResults" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+    - name: Publish Test
+      if: (always)
+      uses: dorny/test-reporter@v1.6.0 
+      with:
+        name: Test results on branch dev
+        path: ./TestResults/*.trx
+        reporter: dotnet-trx
