--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults" l --logger trx --results-directory "TestResults" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
     - name: Publish Test
-      if: (always)
+      if: always()
       uses: dorny/test-reporter@v1.6.0 
       with:
         name: Test results on branch dev
