--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore 
     - name: Test
-      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults" l --logger trx --results-directory "TestResults" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults" --logger trx --results-directory "TestResults" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
     - name: Publish Test
       if: always()
       uses: dorny/test-reporter@v1.6.0 
