--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -39,5 +39,12 @@ jobs:
         name: Test results on branch dev
         path: ./TestResults/*.trx
         reporter: dotnet-trx
+    - name: Create Issue
+      if: failure()
+      uses: JasonEtco/create-an-issue@v2
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+          filename: .github/ISSUE_TEMPLATE/custom.md
    
        
