--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -27,7 +27,7 @@ jobs:
       if: always()
       uses: codecov/codecov-action@v4.0.1
       with:
-       fail_ci_if_error: true
+       fail_ci_if_error: false
        flags: unittests # optional
        name: codecov-umbrella
        verbose: true
@@ -46,5 +46,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           filename: .github/ISSUE_TEMPLATE/custom.md
+    - name: Pull request
+      uses: repo-sync/pull-request@v2
+      with:
+        destination_branch: "main"
+        github_token: ${{secrets.GITHUB_TOKEN}}
    
        
