--- a/.github/workflows/dev_actions.yml
+++ b/.github/workflows/dev_actions.yml
@@ -47,6 +47,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           filename: .github/ISSUE_TEMPLATE/custom.md
+          assignees: blazovics 
     - name: Pull request
       uses: repo-sync/pull-request@v2
       with:
